--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Adding config.py file
+config.py
+
+# Adding large files
+ratings.csv
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
